# Aleph

./: .gitignore  ACCESSIBILITY_API_TEST.md  AGENTS.md  Aether 智能意图检测与工具调度系统分析报告  Aleph 智能意图检测与工具调度系统分析报告  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_PROVIDERS_GUIDE.md  Cargo.toml  DispatcherLayer.md  MARKDOWN_TOOL_ADAPTER_SUMMARY.md  OpenclawSourceCodeAnalysis.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  PHASE9_MEMORY_PROMPT.md  PermissionAuthorization.md  README.md  README_CN.md  SAVE_BAR_IMPLEMENTATION.md  SECTION5_SUMMARY.md  SESSION_MEMORY_PROMPT_PHASE6.md  SPEC_COMPLIANCE_REVIEW_SMARTCOMPACTOR.md  SPEC_COMPLIANCE_REVIEW_TASK5.md  SystemPrompt.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  ULTRATHINK_IMPROVEMENTS.md  Unified-Flat-Namespace.md  WindowsVersion.md  agentstructure.md  build-macos.sh  dilog.md  install.ps1  install.sh  invokingcommandcompletion.md  justfile  macOS-Liquid-Glass.md  macstructure.md  (+14 more)
Aether/core/: CURRENT_STATUS_2025-12-24.md  Cargo.toml  EMBEDDING_PERFORMANCE.md  PHASE2-4_IMPLEMENTATION_SUMMARY.md  README.md  TASK_13_PROMPT_AUGMENTATION.md  TASK_14_AI_PIPELINE_INTEGRATION.md  TASK_18_PII_SCRUBBING.md  TASK_19_APP_EXCLUSION.md  TASK_19_VERIFICATION.md  build.rs  config.search.example.toml  gen_bindings.sh
Aether/core/benches/: ai_benchmarks.rs  l3_planning_bench.rs  memory_benchmarks.rs  memory_benchmarks_simple.rs  pipeline_bench.rs
Aether/core/bindings/: aether.swift  aetherFFI.h
Aether/core/examples/: file_logging_demo.rs  pii_scrubbing_demo.rs
Aether/core/src/: aether.udl  aether_v2.udl  config.rs  core.rs  cowork_ffi.rs  error.rs  event_handler.rs  initialization.rs  lib.rs  title_generator.rs  uniffi_core.rs  uniffi_v2.rs
Aether/core/tests/: integration_ai.rs  integration_hot_reload.rs  integration_logging.rs  integration_memory_ai.rs  integration_native_tools.rs  integration_typewriter.rs  test_l3_planning_real.rs
apps/cli/: Cargo.toml
apps/cli/src/: client.rs  config.rs  error.rs  executor.rs  main.rs  output.rs
apps/dashboard/: Cargo.toml  Trunk.toml
apps/dashboard/src/: api.rs  lib.rs  mock_data.rs  models.rs
apps/desktop/src-tauri/: Cargo.toml  Cargo.toml.bak  tauri.conf.json
apps/shared/: Cargo.toml
apps/shared/src/: auth.rs  client.rs  error.rs  lib.rs
apps/tui/: Cargo.toml
apps/tui/src/: main.rs
clients/dashboard/: .gitignore  Cargo.toml  index.html  tailwind.config.js
clients/dashboard/src/: app.rs  context.rs  lib.rs  models.rs
clients/shared/: Cargo.toml
clients/shared/src/: client.rs  executor.rs  lib.rs  rpc.rs  transport.rs
core/: Cargo.toml  build.rs  config.search.example.toml  uniffi.toml
core/benches/: approval_performance.rs  memory_benchmarks_simple.rs  performance_benchmarks.rs
core/bindings/: DEPRECATED.md  aether.swift  aetherFFI.modulemap  aleph.swift
core/docs/: PHASE5_RIG_CORE_REMOVAL_PLAN.md
core/docs/plans/: 2026-01-31-code-cleanup-design.md  2026-01-31-models-chat-handlers.md  2026-02-04-protocol-adapter-phase2-summary.md
core/examples/: file_logging_demo.rs  pii_scrubbing_demo.rs
core/proptest-regressions/agent_loop/: proptest_decision.txt
core/src/: aether.udl  cowork_ffi.rs  error.rs  event_handler.rs  ffi_cabi.rs  initialization.rs  lib.rs  sync_primitives.rs  title_generator.rs  uniffi_core.rs
core/src/a2a/: config.rs  mod.rs  sub_agent.rs  tests.rs
core/src/acp/: harness.rs  manager.rs  mock_server.rs  mod.rs  protocol.rs  session.rs  tests.rs  transport.rs
core/src/agent/: conversation.rs  manager.rs  mod.rs
core/src/agent_loop/: agent_loop.rs  agent_loop_tests.rs  answer.rs  bootstrap.rs  builder.rs  callback.rs  callback_cli.rs  compaction_trigger.rs  config.rs  context_provider.rs  cortex_telemetry.rs  decision.rs  events.rs  guards.rs  heartbeat.rs  interrupt.rs  loom_concurrency.rs  loop_core.rs  loop_result.rs  message_builder.rs  meta_cognition_integration.rs  mod.rs  overflow.rs  proptest_decision.rs  proptest_state.rs  provider_bridge.rs  question.rs  queue.rs  reply_normalizer.rs  session_protocol.rs  session_sync.rs  state.rs  swarm_events.rs  thinking.rs  traits.rs
core/src/agents/: integration_test.rs  mod.rs  registry.rs  task_tool.rs  thinking.rs  thinking_adapter.rs  types.rs
core/src/approval/: config.rs  mod.rs  policy.rs  types.rs
core/src/arena/: arena.rs  events.rs  handle.rs  integration_tests.rs  manager.rs  mod.rs  storage.rs  types.rs
core/src/browser/: actions.rs  config.rs  context_registry.rs  discovery.rs  error.rs  manager.rs  mod.rs  network_policy.rs  persistence.rs  playwright_bridge.rs  profile.rs  resource_monitor.rs  runtime.rs  snapshot.rs  types.rs
core/src/builtin_tools/: a2a_cancel_task.rs  a2a_discover.rs  a2a_get_task.rs  a2a_list_agents.rs  a2a_send_message.rs  acp_tools.rs  arena.rs  browser.rs  (+28 more)
core/tests/: approval_integration.rs  browser_integration.rs  configmanager_integration.rs  cron_probe.rs  cucumber.rs  dag_integration_test.rs  e2e_worldmodel_dispatcher.rs  e2e_yaml_policies.rs  evolution_auto_load_e2e.rs  extension_v2_test.rs  integration_ai.rs  integration_hot_reload.rs  integration_imessage_routing.rs  integration_logging.rs  integration_sessions_tools.rs  integration_state_bus.rs  integration_typewriter.rs  link_acl_probe.rs  markdown_skill_generator_integration.rs  markdown_skill_hot_reload.rs  markdown_skill_integration.rs  markdown_skills_rpc_test.rs  memory_namespace_isolation.rs  model_discovery_integration.rs  models_chat_handlers_test.rs  permission_enforcement_integration.rs  plugin_runtime_integration.rs  poe_blast_radius_integration.rs  poe_event_loop_integration.rs  poe_interceptor_integration.rs  poe_phase2_integration.rs  poe_prompt_layer_integration.rs  poe_trust_integration.rs  protocol_integration_test.rs  real_api_probe.rs  scripting_engine_test.rs  secret_boundary_integration.rs  secret_router_integration.rs  smart_tool_discovery_test.rs  subagent_orchestration_test.rs  (+5 more)
crates/desktop/: Cargo.toml
crates/logging/: Cargo.toml
shared/protocol/: Cargo.toml
shared/ui_logic/: Cargo.toml
shared_ui_logic/: Cargo.toml  README.md
shared_ui_logic/src/: lib.rs
(+4540 files in other folders)
