[package]
name = "aethecore"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "aethecore"

[features]
# Default includes UniFFI for backward compatibility with existing macOS builds
default = ["uniffi"]
# macOS: UniFFI for Swift bindings
uniffi = ["dep:uniffi"]
# Windows: C ABI for csbindgen P/Invoke bindings
cabi = []

[dependencies]
# UniFFI (optional, enabled by default for macOS)
uniffi = { version = "0.28", features = ["cli"], optional = true }

# REMOVED: System API dependencies (rdev, arboard, enigo) - now handled by Swift layer
# See: refactor-native-api-separation proposal
# - rdev → Swift GlobalHotkeyMonitor (CGEventTap)
# - arboard → Swift ClipboardManager (NSPasteboard)
# - enigo → Swift KeyboardSimulator (CGEvent)
# - core-foundation/core-graphics → no longer needed

tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros", "process", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
# For HTTP client
# Use native-tls instead of rustls to trust system CA certificates
# This is required when HTTPS interception (e.g., Kaspersky, corporate proxies) is present
reqwest = { version = "0.11", features = ["json", "native-tls", "stream", "multipart"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
log = "0.4"
# For structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
# For config file watching
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.3"
# For image dimension parsing (still used in AI provider integration)
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }
# For Base64 encoding of images (still used in AI provider integration)
base64 = "0.21"
# For async trait methods
async-trait = "0.1"
# For async combinators (join_all, etc.)
futures = "0.3"
# For local embedding inference (bge-small-zh-v1.5)
fastembed = "4"
# For stable get_or_try_init support
once_cell = "1.19"
# For SKILL.md YAML frontmatter parsing
serde_yaml = "0.9"
# For skills ZIP extraction
zip = "2.2"
# For temporary directories (plugin installation)
tempfile = "3.8"
# For git operations (MCP/Services)
git2 = "0.19"
# For file pattern matching (MCP/Services)
glob = "0.3"
# For hostname detection (Services)
hostname = "0.4"
# For username detection (Services)
whoami = "1.5"
# For type-safe JSON Schema generation (L3 Agent Planning)
schemars = "0.8"
# For HTML parsing in WebFetchTool
scraper = "0.22"
# For URL parsing and validation
url = "2.5"
# Rig framework - REMOVED (migrated to self-implemented tools)
# rig-core = "0.28"
# rig-sqlite = "0.1.31"
# LRU cache for intent caching
lru = "0.12"
# For tar.gz extraction (runtime manager - cross-platform)
flate2 = "1.0"
tar = "0.4"
# For tar.xz extraction (Linux ffmpeg - cross-platform)
xz2 = "0.1"
# For SHA-256 hashing (semantic cache)
sha2 = "0.10"
# For consistent hashing (A/B testing traffic splitting)
siphasher = "1.0"
# For PDF generation
printpdf = "0.7"
# For Markdown parsing (PDF generation)
pulldown-cmark = "0.12"
# For HTTP date parsing (Retry-After header)
httpdate = "1.0"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
# csbindgen for Windows C# bindings
csbindgen = "1.9"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["uniffi"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.8"
filetime = "0.2"
serial_test = "3.0"

[[bench]]
name = "memory_benchmarks_simple"
harness = false
