[package]
name = "aethecore"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[lib]
crate-type = ["rlib"]
name = "aethecore"

[features]
# Default: Gateway-only architecture (no FFI)
default = ["gateway"]
# Windows: C ABI for csbindgen P/Invoke bindings (deprecated)
cabi = []
# Gateway: WebSocket control plane for Moltbot-style architecture
gateway = ["dep:tokio-tungstenite", "dep:futures-util", "dep:clap", "dep:tower-http", "dep:axum", "dep:hyper", "dep:hyper-util", "dep:tower", "dep:mime_guess"]
# Telegram channel support
telegram = ["dep:teloxide", "gateway"]
# Discord channel support
discord = ["dep:serenity", "gateway"]
# All messaging channels
all-channels = ["telegram", "discord"]
# Cron job scheduling
cron = ["dep:cron", "gateway"]
# Browser control via CDP
browser = ["dep:chromiumoxide", "gateway"]
# CLI interactive prompts (inquire for rich user questions)
cli = ["dep:inquire"]
# Plugin system: WebAssembly runtime via Extism
plugin-wasm = ["dep:extism"]
# Plugin system: Node.js runtime (placeholder)
plugin-nodejs = []
# Plugin system: All runtimes
plugin-all = ["plugin-wasm", "plugin-nodejs"]

[dependencies]
# REMOVED: UniFFI - using Gateway WebSocket architecture
# REMOVED: System API dependencies (rdev, arboard, enigo) - now handled by Swift layer
# See: refactor-native-api-separation proposal
# - rdev → Swift GlobalHotkeyMonitor (CGEventTap)
# - arboard → Swift ClipboardManager (NSPasteboard)
# - enigo → Swift KeyboardSimulator (CGEvent)
# - core-foundation/core-graphics → no longer needed

tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros", "process", "fs", "io-util", "signal", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.6"
uuid = { version = "1.7", features = ["v4", "serde"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
# For HTTP client
# Use native-tls instead of rustls to trust system CA certificates
# This is required when HTTPS interception (e.g., Kaspersky, corporate proxies) is present
reqwest = { version = "0.11", features = ["json", "native-tls", "stream", "multipart"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
log = "0.4"
# For structured logging
tracing = "0.1"
# For Unix process management (daemon mode)
libc = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
# For config file watching
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.3"
# For image dimension parsing (still used in AI provider integration)
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }
# For Base64 encoding of images (still used in AI provider integration)
base64 = "0.21"
# For async trait methods
async-trait = "0.1"
# For async combinators (join_all, etc.)
futures = "0.3"
# For local embedding inference (bge-small-zh-v1.5)
fastembed = "4"
# For stable get_or_try_init support
once_cell = "1.19"
# For SKILL.md YAML frontmatter parsing
serde_yaml = "0.9"
# For skills ZIP extraction
zip = "2.2"
# For temporary directories (plugin installation)
tempfile = "3.8"
# For git operations (MCP/Services)
git2 = "0.19"
# For file pattern matching (MCP/Services)
glob = "0.3"
# For directory traversal (file scanning)
walkdir = "2.5"
# For hostname detection (Services)
hostname = "0.4"
# For username detection (Services)
whoami = "1.5"
# For type-safe JSON Schema generation (L3 Agent Planning)
schemars = "0.8"
# For HTML parsing in WebFetchTool
scraper = "0.22"
# For URL parsing and validation
url = "2.5"
# Rig framework - REMOVED (migrated to self-implemented tools)
# rig-core = "0.28"
# rig-sqlite = "0.1.31"
# LRU cache for intent caching
lru = "0.12"
# For tar.gz extraction (runtime manager - cross-platform)
flate2 = "1.0"
tar = "0.4"
# For tar.xz extraction (Linux ffmpeg - cross-platform)
xz2 = "0.1"
# For SHA-256 hashing (semantic cache)
sha2 = "0.10"
# For HMAC signature verification (webhooks)
hmac = "0.12"
subtle = "2.5"
hex = "0.4"
# Ed25519 signatures for device authentication
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# Base32 encoding for pairing codes
base32 = "0.5"
# For consistent hashing (A/B testing traffic splitting)
siphasher = "1.0"
# PTY for process control (PtySupervisor)
portable-pty = "0.8"
# ANSI escape sequence stripping
strip-ansi-escapes = "0.2"
# For PDF generation
printpdf = "0.7"
# For Markdown parsing (PDF generation)
pulldown-cmark = "0.12"
# For HTTP date parsing (Retry-After header)
httpdate = "1.0"

# Gateway dependencies (optional)
tokio-tungstenite = { version = "0.26", optional = true }
futures-util = { version = "0.3", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
axum = { version = "0.8", optional = true }
hyper = { version = "1.6", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
tower = { version = "0.5", optional = true }
mime_guess = { version = "2.0", optional = true }

# Channel dependencies (optional)
teloxide = { version = "0.13", features = ["macros"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }

# Cron dependencies (optional)
cron = { version = "0.13", optional = true }

# Browser control dependencies (optional)
chromiumoxide = { version = "0.7", optional = true, default-features = false, features = ["tokio-runtime"] }

# Plugin system dependencies (optional)
extism = { version = "1.7", optional = true }

# CLI interactive prompts
inquire = { version = "0.7", optional = true }

[build-dependencies]
# csbindgen for Windows C# bindings (deprecated)
csbindgen = "1.9"

[[bin]]
name = "aether-gateway"
path = "src/bin/aether_gateway/main.rs"
required-features = ["gateway"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.8"
filetime = "0.2"
serial_test = "3.0"

[[bench]]
name = "memory_benchmarks_simple"
harness = false
