[package]
name = "alephcore"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[lib]
crate-type = ["rlib", "cdylib"]
name = "alephcore"

[features]
# Default: Gateway-only architecture (no FFI)
default = ["gateway"]
# Gateway: WebSocket control plane for Moltbot-style architecture
gateway = ["dep:tokio-tungstenite", "dep:futures-util", "dep:clap", "dep:tower-http", "dep:axum", "dep:tower", "dep:mime_guess", "dep:mdns-sd", "dep:sysinfo"]
# ControlPlane: Embedded web UI for configuration management
control-plane = ["gateway", "dep:rust-embed"]
# Telegram channel support
telegram = ["dep:teloxide", "gateway"]
# Discord channel support
discord = ["dep:serenity", "gateway"]
# WhatsApp channel support
whatsapp = ["gateway"]
# Slack channel support (Socket Mode + REST API)
slack = ["gateway"]
# Email channel support (IMAP + SMTP)
email = ["gateway", "dep:lettre", "dep:mail-parser", "dep:async-imap", "dep:async-native-tls"]
# Matrix channel support (Client-Server API v3)
matrix = ["gateway"]
# Signal channel support (signal-cli REST API)
signal = ["gateway"]
# Mattermost channel support (WebSocket + REST API v4)
mattermost = ["gateway"]
# IRC channel support (RFC 2812 raw TCP)
irc = ["gateway"]
# Generic Webhook channel support (bidirectional HTTP + HMAC)
webhook = ["gateway"]
# XMPP channel support (RFC 6120/6121 + XEP-0045 MUC, raw TCP)
xmpp = ["gateway"]
# Nostr channel support (NIP-01 relay + NIP-04 DM, Schnorr signing)
nostr = ["gateway"]
# All messaging channels
all-channels = ["telegram", "discord", "whatsapp", "slack", "email", "matrix", "signal", "mattermost", "irc", "webhook", "xmpp", "nostr"]
# Cron job scheduling
cron = ["dep:cron", "dep:chrono-tz", "dep:sysinfo", "gateway"]
# CLI interactive prompts (inquire for rich user questions)
cli = ["dep:inquire"]
# Plugin system: WebAssembly runtime via Extism
plugin-wasm = ["dep:extism"]
# Plugin system: Node.js runtime (placeholder)
plugin-nodejs = []
# Plugin system: All runtimes
plugin-all = ["plugin-wasm", "plugin-nodejs"]
# Test helpers for integration tests
test-helpers = []
# Loom concurrency testing (replaces std sync primitives)
loom = ["dep:loom"]

[dependencies]
# REMOVED: UniFFI - using Gateway WebSocket architecture
# REMOVED: System API dependencies (rdev, arboard, enigo) - now handled by Swift layer
# See: refactor-native-api-separation proposal
# - rdev → Swift GlobalHotkeyMonitor (CGEventTap)
# - arboard → Swift ClipboardManager (NSPasteboard)
# - enigo → Swift KeyboardSimulator (CGEvent)
# - core-foundation/core-graphics → no longer needed

tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros", "process", "fs", "io-util", "signal", "net"] }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
# Protocol types (shared with clients)
aleph-protocol = { path = "../shared/protocol" }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.6"
uuid = { version = "1.7", features = ["v4", "serde"] }
regex = "1.10"
aho-corasick = "1.1"
percent-encoding = "2.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", optional = true }
rand = "0.8"
# For HTTP client
# Use native-tls instead of rustls to trust system CA certificates
# This is required when HTTPS interception (e.g., Kaspersky, corporate proxies) is present
reqwest = { version = "0.12", features = ["json", "native-tls", "stream", "multipart"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
log = "0.4"
# For structured logging
tracing = "0.1"
# For Unix process management (daemon mode)
libc = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
# For config file watching
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.3"
# For user idle detection (Perception Layer)
user-idle = "0.5"
# For shell path expansion (Perception Layer)
shellexpand = "3.1"
# For protocol template rendering (configurable protocols)
handlebars = "5.1"
# For JSON path extraction (configurable protocols)
jsonpath-rust = "0.5"
# For image dimension parsing (still used in AI provider integration)
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }
# For Base64 encoding of images (still used in AI provider integration)
base64 = "0.21"
# Chrome DevTools Protocol client (browser automation)
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
# For async trait methods
async-trait = "0.1"
# For convenient error handling in internal functions
anyhow = "1.0"
# For async combinators (join_all, etc.)
futures = "0.3"
# LanceDB vector database (replacing sqlite-vec)
lancedb = "0.26"
lance-index = "2.0"
arrow-array = "57"
arrow-schema = "57"
arrow-cast = "57"
# For stable get_or_try_init support
once_cell = "1.19"
# For SKILL.md YAML frontmatter parsing
serde_yaml = "0.9"
# For skills ZIP extraction
zip = "2.2"
# For temporary directories (plugin installation)
tempfile = "3.8"
# For git operations (MCP/Services)
git2 = "0.19"
# For file pattern matching (MCP/Services)
glob = "0.3"
# For glob pattern matching in filesystem watcher
glob-match = "0.2"
# For directory traversal (file scanning)
walkdir = "2.5"
# For binary existence check (Markdown skill loader)
which = "6.0"
# For type-safe JSON Schema generation (L3 Agent Planning)
schemars = "0.8"
# For JSON Schema validation (config self-configuration)
jsonschema = "0.29"
# For HTML parsing in WebFetchTool
scraper = "0.22"
# For URL parsing and validation
url = "2.5"
# Rig framework - REMOVED (migrated to self-implemented tools)
# rig-core = "0.28"
# rig-sqlite = "0.1.31"
# LRU cache for intent caching
lru = "0.12"
# For SHA-256 hashing (semantic cache)
sha2 = "0.10"
# For HMAC signature verification (webhooks)
hmac = "0.12"
subtle = "2.5"
hex = "0.4"
# Ed25519 signatures for device authentication
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# For consistent hashing (A/B testing traffic splitting)
siphasher = "1.0"
# Secret vault encryption (Agent Secret Management)
aes-gcm = "0.10"
hkdf = "0.12"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
# EVM signing (Agent Secret Management Phase 3)
k256 = { version = "0.13", features = ["ecdsa", "schnorr"] }
sha3 = "0.10"
bincode = "1.3"
rpassword = "5.0"
# PTY for process control (PtySupervisor)
portable-pty = "0.8"
# ANSI escape sequence stripping
strip-ansi-escapes = "0.2"
# For PDF generation
printpdf = "0.7"
# For Markdown parsing (PDF generation)
pulldown-cmark = "0.12"
# For HTTP date parsing (Retry-After header)
# For custom rules scripting engine (Phase 5)
rhai = { version = "1.17", features = ["sync", "no_float", "only_i64"] }
httpdate = "1.0"
# For concurrent hash maps (per-runId sequence counters)
dashmap = "5.5"
# For SSE (Server-Sent Events) client in MCP transport
reqwest-eventsource = "0.6"
plist = "1.7"
sysinfo = { version = "0.33", optional = true }
battery = "0.7"

# Gateway dependencies (optional)
tokio-tungstenite = { version = "0.26", optional = true }
futures-util = { version = "0.3", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
mime_guess = { version = "2.0", optional = true }
mdns-sd = { workspace = true, optional = true }

# ControlPlane dependencies (optional)
rust-embed = { version = "8.0", features = ["compression"], optional = true }

# Channel dependencies (optional)
teloxide = { version = "0.13", features = ["macros"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }
# Email channel dependencies (optional)
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "builder", "smtp-transport"], optional = true }
mail-parser = { version = "0.9", optional = true }
async-imap = { version = "0.10", optional = true }
async-native-tls = { version = "0.5", optional = true }

# Cron dependencies (optional)
cron = { version = "0.13", optional = true }

# Plugin system dependencies (optional)
extism = { version = "1.7", optional = true }

# CLI interactive prompts
inquire = { version = "0.7", optional = true }

# Loom concurrency testing (optional, activated via --features loom)
loom = { version = "0.7", optional = true }

[build-dependencies]
# No build dependencies - using Gateway WebSocket architecture

[[bin]]
name = "aleph-server"
path = "src/bin/aleph_server/main.rs"
required-features = ["gateway"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
cucumber = { version = "0.21", features = ["macros"] }
tempfile = "3.8"
filetime = "0.2"
serial_test = "3.0"
aleph-sdk = { path = "../apps/shared" }
aleph-protocol = { path = "../shared/protocol" }
proptest = "1.4"

[[bench]]
name = "memory_benchmarks_simple"
harness = false

[[bench]]
name = "approval_performance"
harness = false

[[test]]
name = "cucumber"
harness = false
