[package]
name = "aethecore"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "aethecore"

[dependencies]
uniffi = { version = "0.25", features = ["cli"] }
rdev = "0.5"
arboard = "3.3"
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4"] }
regex = "1.10"
chrono = "0.4"
# For lazy loading and synchronization
once_cell = "1.19"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "memory_benchmarks_simple"
harness = false
