[package]
name = "aethecore"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "aethecore"

[dependencies]
uniffi = { version = "0.25", features = ["cli"] }
rdev = "0.5"
arboard = "3.3"
enigo = "0.2.1"
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros", "process"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4"] }
regex = "1.10"
chrono = "0.4"
# For lazy loading and synchronization
once_cell = "1.19"
# For async trait methods
async-trait = "0.1"
# For HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
log = "0.4"
# For structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# For config file watching
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.3"
# For image dimension parsing
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }
# For Base64 encoding of images
base64 = "0.21"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.8"

[[bench]]
name = "memory_benchmarks_simple"
harness = false

[[bench]]
name = "ai_benchmarks"
harness = false
