[package]
name = "aethecore"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "aethecore"

[features]
# Reserved features for future capabilities (not yet implemented)
search = []
mcp = []
skills = []

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
# REMOVED: System API dependencies (rdev, arboard, enigo) - now handled by Swift layer
# See: refactor-native-api-separation proposal
# - rdev → Swift GlobalHotkeyMonitor (CGEventTap)
# - arboard → Swift ClipboardManager (NSPasteboard)
# - enigo → Swift KeyboardSimulator (CGEvent)
# - core-foundation/core-graphics → no longer needed
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros", "process", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4"] }
regex = "1.10"
chrono = "0.4"
# For stream utilities (StreamExt)
futures-util = "0.3"
# For HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
log = "0.4"
# For structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
# For config file watching
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.3"
# For image dimension parsing (still used in AI provider integration)
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }
# For Base64 encoding of images (still used in AI provider integration)
base64 = "0.21"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.8"
filetime = "0.2"
serial_test = "3.0"

[[bench]]
name = "memory_benchmarks_simple"
harness = false

[[bench]]
name = "ai_benchmarks"
harness = false
