[package]
name = "aleph-cli"
version = "0.1.0"
edition = "2021"
description = "Aleph CLI - Reference implementation of Aleph Protocol client"
license = "MIT"
readme = "README.md"

# IMPORTANT: This crate MUST NOT depend on alephcore
# It serves as a reference implementation showing how to build
# a client using only the protocol types.

[[bin]]
name = "aleph"
path = "src/main.rs"

[dependencies]
# Aleph dependencies
aleph-protocol = { path = "../../shared/protocol" }
# TODO: Integrate aleph-sdk for discovery when CLI uses it
# aleph-sdk = { path = "../shared" }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "signal", "net", "process"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async traits (for ConfigStore)
async-trait = "0.1"

# CLI interface
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4"

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"
tui-textarea = "0.7"
unicode-width = "0.2"
textwrap = "0.16"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aleph-logging = { path = "../../crates/logging" }

# Secure password input
rpassword = "7"

# Utilities
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
dirs = "5.0"

# Plugin packaging
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.8"

[lints.rust]
# Ensure we don't accidentally depend on alephcore
unexpected_cfgs = "warn"
