[package]
name = "aleph-dashboard"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework (0.8.15 - The latest and greatest)
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlElement", "Element", "Window", "Document"] }
console_error_panic_hook = "0.1"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tailwind_fuse = { version = "0.3", features = ["variant"] }
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = "0.4"
futures = "0.3"

# Internal logic
shared-ui-logic = { path = "../../shared/ui_logic", features = ["leptos", "wasm"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true