[package]
name = "aleph-sdk"
version = "0.1.0"
edition = "2021"
description = "Client SDK for Aleph Personal AI Hub"
rust-version = "1.92"

[lib]
crate-type = ["rlib"]
name = "aleph_sdk"

[dependencies]
aleph-protocol = { path = "../../shared/protocol" }
mdns-sd = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = { workspace = true }
