[package]
name = "aleph-tui"
version = "0.1.0"
edition = "2021"
description = "Aleph TUI - Interactive terminal interface for Aleph"
license = "AGPL-3.0-or-later"

# IMPORTANT: This crate MUST NOT depend on alephcore
# It communicates with Aleph Gateway via WebSocket using aleph-protocol types.

[[bin]]
name = "aleph-tui"
path = "src/main.rs"

[dependencies]
# Aleph dependencies
aleph-protocol = { path = "../../shared/protocol" }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "signal", "net"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"
tui-textarea = "0.7"
unicode-width = "0.2"
textwrap = "0.16"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aleph-logging = { path = "../../crates/logging" }

# Utilities
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
dirs = "5.0"
