[package]
name = "aleph-dashboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework (0.6 - stable)
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlElement", "Element"] }
console_error_panic_hook = "0.1"
console_log = "1.0"

# Utilities
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary
