[package]
name = "aleph-logging"
description = "Shared logging infrastructure for all Aleph components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Timestamps (PII format)
chrono = "0.4"

# PII scrubbing
regex = "1.10"

# Home directory resolution
dirs = "5.0"

[dev-dependencies]
filetime = "0.2"
tempfile = "3.8"
