[package]
name = "aleph-protocol"
version = "0.1.0"
edition = "2021"
description = "Aleph Agent Protocol - Pure type definitions for protocol communication"
license = "AGPL-3.0-or-later"
readme = "README.md"

# This crate is intentionally minimal - pure types only, no runtime dependencies
# Clients in any language can use these type definitions as a reference

[dependencies]
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
