[package]
name = "shared-ui-logic"
version = "0.1.0"
edition = "2021"
description = "Shared UI logic and SDK for Aleph clients"

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.7", features = ["v4", "js"] }

# Internal
aleph-protocol = { path = "../protocol" }

# Leptos (0.8 for the latest stable Reactivity)
leptos = { version = "0.8", features = ["csr"], optional = true }

# WASM (for browser)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Window",
    "console"
] }

# Native (for CLI/Tauri)
tokio = { version = "1.35", optional = true, features = ["full"] }
tokio-tungstenite = { version = "0.21", optional = true, features = ["native-tls"] }

[features]
default = ["leptos", "wasm"]
leptos = ["dep:leptos"]
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys"
]
native = [
    "dep:tokio",
    "dep:tokio-tungstenite"
]
observability = []
